--- a/popup.html
+++ b/popup.html
@@ -5,32 +5,101 @@
     <style>
       body {
         font-family: Arial, sans-serif;
-        padding: 10px;
+        padding: 15px;
         width: 300px;
       }
-      input {
-        width: 100%;
-        padding: 5px;
-        margin-bottom: 10px;
+
+      .toggle-container {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        margin: 15px 0;
+        padding: 10px;
+        background: #f5f5f5;
+        border-radius: 8px;
       }
+
+      .toggle-label {
+        font-weight: bold;
+        font-size: 14px;
+      }
+
+      .toggle-switch {
+        position: relative;
+        width: 50px;
+        height: 24px;
+        background: #ccc;
+        border-radius: 12px;
+        cursor: pointer;
+        transition: background 0.3s;
+      }
+
+      .toggle-switch.active {
+        background: #4caf50;
+      }
+
+      .toggle-slider {
+        position: absolute;
+        top: 2px;
+        left: 2px;
+        width: 20px;
+        height: 20px;
+        background: white;
+        border-radius: 50%;
+        transition: transform 0.3s;
+      }
+
+      .toggle-switch.active .toggle-slider {
+        transform: translateX(26px);
+      }
+
       button {
         width: 100%;
-        padding: 5px;
+        padding: 8px;
+        margin-top: 10px;
+        background: #1976d2;
+        color: white;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+      }
+
+      button:hover {
+        background: #1565c0;
+      }
+
+      .status {
+        text-align: center;
+        margin: 10px 0;
+        font-size: 12px;
+        color: #666;
       }
     </style>
   </head>
   <body>
-    <h2>YT De-Clutter: Hide Shorts, Playables & Explore</h2>
+    <h2>YT De-Clutter: Hide Shorts, Playables & Distractions</h2>
+
+    <div class="toggle-container">
+      <span class="toggle-label">Extension Active</span>
+      <div class="toggle-switch" id="toggleSwitch">
+        <div class="toggle-slider"></div>
+      </div>
+    </div>
+
+    <div class="status" id="status">Loading...</div>
+
     <p>
       This extension removes YouTube Shorts, Playables, the Explore section, and
-      More From YouTube across youtube.com. Hard blocks navigation to "/shorts"
-      and "/playables" URLs. No settings, no options, no nothing. Just clean
-      YouTube. Don't let YouTube hijack your dopamine. If you have any issues,
-      please contact me at
+      video page distractions across youtube.com. Hard blocks navigation to
+      "/shorts" and "/playables" URLs. Toggle off to see comments and
+      recommendations when needed. If you have any issues, please contact me at
       <a href="mailto:fcostant.business@gmail.com"
         >fcostant.business@gmail.com</a
       >.
     </p>
+
+    <button id="forceRefresh">Refresh Current Tab</button>
+
     <script src="popup.js"></script>
   </body>
 </html>
