Refactor refresh functionality in content.js and update UI elements in popup.html and popup.js
- Removed the restoreHiddenElements and forceRefresh functions to streamline the code.
- Updated message handling to directly reload the current tab instead of using forceClean.
- Renamed the "Refresh Current Tab" button to "Reload Page" for clarity.
- Adjusted status messages to reflect the new reload functionality.

--- a/popup.html
+++ b/popup.html
@@ -98,7 +98,7 @@
       >.
     </p>
 
-    <button id="forceRefresh">Refresh Current Tab</button>
+    <button id="forceRefresh">Reload Page</button>
 
     <script src="popup.js"></script>
   </body>
