Update refresh reminder text in popup.html for improved clarity

--- a/popup.html
+++ b/popup.html
@@ -105,7 +105,8 @@
     <div class="status" id="status">Loading...</div>
 
     <div class="refresh-reminder" id="refreshReminder">
-      💡 Tip: Click "Reload Page" below to see normal YouTube immediately
+      <strong>Tip:</strong> Click "Reload Page" below to see normal YouTube
+      immediately
     </div>
 
     <p>
